# halo2-example

./: .gitignore  Cargo.nix  Cargo.toml  NOTICE  README.md  flake.nix  rust-toolchain.toml
src/: lib.rs  main.rs
