[package]
name = "halo2-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "47f2cc83498de27bcf1641e9f2e02e0c86551c7e" }
pasta_curves = "0.5"
rand_core = { version = "0.6", features = [ "getrandom" ] }
